public/less/quotes.less
// main: styles.less
@import (reference) "variables.less";
article.quote {
    position: relative;
    padding: 3.5rem 1.5rem;
    display: table;
    width: 100%;
    max-width: 700px;
    min-height: 175px;
    text-shadow: none;
    figure {
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        width: 35%;
        margin: 0;
        border-radius: 2rem 0 0 2rem;
        background-position: center center;
        background-size: cover;
        image-rendering: pixelated;
        .author-fade {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }
    }
    .quote-content {
        display: table-cell;
        height: 100%;
        vertical-align: middle;
    }
    a {
        color: currentColor;
        text-decoration: none;
        
        &:hover {
            text-decoration: underline;
        }
    }
    
    .quote-author a {
        display: inline-block;
    }
    .quote-content.no-author-image {
        width: 100%!important;
        
        p {
            margin-top: -1.5rem;
            margin-left: 0;
        }
        
        .video-embed-wrap {
            position: relative;
            padding-top: 66.6667%;
            width: 100%;

            > * {
                position: absolute!important;
                top: 0;
                left: 0;
                width: 100%!important;
                min-width: auto!important;
                height: 100%!important;
                margin: 0!important;
            }
        }
    }
    p {
        position: relative;
        text-align: center;
        color: currentColor;
        margin-top: 0;
        margin-left: 30%;
        line-height: 1;
        z-index: 10;
        &:not(.quote-author) {
            font-family: 'Amatic SC', 'Exo 2', sans-serif;
            ;
            font-size: 2.8rem;
        }
        &.quote-author {
            margin-top: 1rem;
            font-size: 1.4rem;
            font-weight: light;
            margin-left: calc( ~"30% - .9rem");
            text-transform: uppercase;
            .author-title {
                display: block;
                margin-top: .2rem;
                font-size: .8em;
                text-transform: none;
                font-weight: 300;
                opacity: .7;
             }
        }
    }
    svg {
        position: absolute;
        right: 0;
        bottom: -11px;
    }
}

// Stagger quotes at 100% on quotes page
.quotes-page article.quote {
    @media @tablet {
        &:nth-child(odd) {
            left: auto!important;
            right: 0px!important;
        }
    }
}



#twitter-share {
    display: inline-block;
    position: absolute;
    bottom: .75rem;
    right: .75rem;
    @size: 5rem;
    font-size: @size;
    text-decoration: none;
    transition: all .3s ease-out;
    transform: scale(.5) translateX(50%) translateY(50%);
    
    i.fa {
        backface-visibility: hidden;
        -webkit-font-smoothing: antialiased;
        transition: all .3s ease-out;
        opacity: .5
    }
    
    .twitter-share--text {
        position: absolute;
        top: 50%;
        right: 100%;
        display: block;
        // absolute position width hack :(
        //height: 100%;
        width: 8.5em;
        text-align: right;
        transform:  translate3d(50%,-50%,0) scaleX(.1) scaleY(.5);
        backface-visibility: hidden;
        -webkit-font-smoothing: antialiased;
        padding-right: .5em;
        font-size: @size*.5;
        line-height: 1;
        opacity: 0;
        transition: all .3s ease-out;
        text-transform: uppercase;
    }
    
    &:hover {
        i.fa {
            transform: translate3d(0,0,0) perspective(1px) scale(1.4) rotate(-12deg);
            transform-origin: center center;
            opacity: 1;
        }
        
        .twitter-share--text {
            transform: translate3d(0%,-50%,0) scaleX(1);
            opacity: 1;
        }
    }
}

